--- a/develop/blocks/account-layout/account-layout.pug
+++ b/develop/blocks/account-layout/account-layout.pug
@@ -1,6 +1,6 @@
 mixin account-layout()
     +b.account-layout
-        +lines
+        +lines('account')
         +inner
             +e.wrapper
                 +e.ASIDE.sidebar
