--- a/develop/blocks/account-monitoring/account-monitoring.scss
+++ b/develop/blocks/account-monitoring/account-monitoring.scss
@@ -36,7 +36,10 @@
     }
 }
 
-@media #{$desktop} {
+@media #{$laptop} {
     .account-monitoring {
+        &__sidebar {
+            width: 290px;
+        }
     }
 }
