--- a/develop/blocks/monitoring-table/monitoring-table.pug
+++ b/develop/blocks/monitoring-table/monitoring-table.pug
@@ -96,62 +96,60 @@ mixin monitoring-table()
                 tbody
                     tr
                         td 07.20
-                        td 6 006 122.46 ₽ 
-                        td 100 460.56 ₽ 
-                        td 9.84%
-                        td 28.10%
-                        td 28.10%
-                        td
+                        td(class='right') 6 006 122.46 ₽ 
+                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 9.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
                             a(href='#' download)
                                 +icon('d-arrow')
                     tr
                         td 08.20
-                        td 1 006 122.46 ₽ 
-                        td 40 460.56 ₽ 
-                        td 19.84%
-                        td 28.10%
-                        td 28.10%
-                        td
+                        td(class='right') 1 006 122.46 ₽ 
+                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 19.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
                             a(href='#' download)
                                 +icon('d-arrow')
                     tr
                         td 07.20
-                        td 6 006 122.46 ₽ 
-                        td 100 460.56 ₽ 
-                        td 9.84%
-                        td 28.10%
-                        td 28.10%
-                        td
-                            a(href='#' download)
-                                +icon('d-arrow')
+                        td(class='right') 6 006 122.46 ₽ 
+                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 9.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
+                            | -
                     tr
                         td 08.20
-                        td 1 006 122.46 ₽ 
-                        td 40 460.56 ₽ 
-                        td 19.84%
-                        td 28.10%
-                        td 28.10%
-                        td
+                        td(class='right') 1 006 122.46 ₽ 
+                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 19.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
                             a(href='#' download)
                                 +icon('d-arrow')
                     tr
                         td 07.20
-                        td 6 006 122.46 ₽ 
-                        td 100 460.56 ₽ 
-                        td 9.84%
-                        td 28.10%
-                        td 28.10%
-                        td
-                            a(href='#' download)
-                                +icon('d-arrow')
+                        td(class='right') 6 006 122.46 ₽ 
+                        td(class='right') 100 460.56 ₽ 
+                        td(class='right') 9.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
+                            | -
                     tr
                         td 08.20
-                        td 1 006 122.46 ₽ 
-                        td 40 460.56 ₽ 
-                        td 19.84%
-                        td 28.10%
-                        td 28.10%
-                        td
+                        td(class='right') 1 006 122.46 ₽ 
+                        td(class='right') 40 460.56 ₽ 
+                        td(class='right') 19.84%
+                        td(class='right') 28.10%
+                        td(class='right') 28.10%
+                        td(class='center')
                             a(href='#' download)
                                 +icon('d-arrow')
         +e.actions
