--- a/develop/blocks/account-nav/account-nav.pug
+++ b/develop/blocks/account-nav/account-nav.pug
@@ -10,6 +10,5 @@ mixin account-nav()
             +e.LI.item
                 +e.A.link.active(href='#') Реквизиты
             +e.LI.item
-                +e.A.link.--notify(href='#') Партнерская программа
-
+                +e.A.link.--notify(href='#') Рекомендовать друга
 
