--- a/develop/jade/account-page-7.pug
+++ b/develop/jade/account-page-7.pug
@@ -12,7 +12,7 @@ html(lang='ru')
             +account-monitoring
                 +e.header
                     +e.title Все фонды
-                    +e.A.link(href='#') На продажу
+                    +e.A.link.application-trigger(href='#') На продажу
                         +icon('l-arrow')
                 +e.toggles
                     +e.toggle
@@ -53,4 +53,5 @@ html(lang='ru')
                     +monitoring-table
         +main-footer
             +lines
+        +monitoring-sale-modal
         +doc-footer
