--- a/develop/blocks/monitoring-data/monitoring-data.scss
+++ b/develop/blocks/monitoring-data/monitoring-data.scss
@@ -201,11 +201,15 @@
 @media #{$laptop} {
     .monitoring-data {
         &__header {
-            padding: 0 36px;
+            padding: 0 24px;
+        }
+
+        &__title {
+            font-size: 18px;
         }
 
         &__toggles {
-            padding: 20px 36px 0 36px;
+            padding: 20px 24px 0 24px;
             display: flex;
             flex-flow: row wrap;
             margin: 0 -12px;
@@ -216,9 +220,14 @@
             padding: 0 12px;
         }
 
+        &__toggle-title {
+            font-size: 14px;
+        }
+
         &__toggle-input {
             span {
-                font-size: 12px;
+                font-size: 13px;
+                white-space: nowrap;
             }
         }
 
@@ -227,8 +236,8 @@
         }
 
         &__data-list {
-            padding-left: 36px;
-            padding-right: 36px;
+            padding-left: 24px;
+            padding-right: 24px;
         }
     }
 }
