--- a/develop/blocks/monitoring-graph/monitoring-graph.scss
+++ b/develop/blocks/monitoring-graph/monitoring-graph.scss
@@ -100,6 +100,8 @@
     .monitoring-graph {
         &__title {
             padding: 0 40px;
+
+            font-size: 14px;
         }
 
         &__caption {
@@ -109,6 +111,14 @@
         &__caption-block {
             max-width: 170px;
             margin-right: 48px;
+        }
+
+        &__caption-value {
+            font-size: 16px;
+        }
+
+        &__caption-label {
+            font-size: 14px;
         }
     }
 }
