--- a/app/css/main.css
+++ b/app/css/main.css
@@ -6802,9 +6802,25 @@ th {
   .monitoring-data__data-list {
     padding-left: 16px;
     padding-right: 16px;
-    -webkit-column-count: 2;
-       -moz-column-count: 2;
-            column-count: 2; }
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+       -moz-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: justify;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  .monitoring-data__data-col {
+    padding-right: 24px;
+    max-width: 50%;
+    -webkit-box-flex: 1;
+       -moz-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1; }
   .monitoring-data__steps {
     padding-top: 30px;
     width: 100%;
@@ -6840,7 +6856,9 @@ th {
     padding-top: 40px; }
   .monitoring-data__data-list {
     padding-left: 24px;
-    padding-right: 24px; } }
+    padding-right: 24px; }
+  .monitoring-data__data-col {
+    padding-right: 32px; } }
 
 .monitoring-funds__row {
   position: relative;
