--- a/develop/jade/account-page-8.pug
+++ b/develop/jade/account-page-8.pug
@@ -15,28 +15,30 @@ html(lang='ru')
                     +e.A.link(href='#') На продажу
                         +icon('l-arrow')
                 +e.data-list
-                    +e.data-block
-                        +e.data-label Вам принадлежит:
-                        +e.data-value 18 из 1990 паев
-                    +e.data-block
-                        +e.data-label Инвестиции:
-                        +e.data-value 4 344 132.00 ₽
-                    +e.data-block
-                        +e.data-label Ближайшая выплата:
-                        +e.data-value до 30.09.2020
-                    +e.data-block
-                        +e.data-label Рейтинг фонда:
-                        +e.data-value.--green А1
-                    +e.data-block
-                        +e.data-label Документы:
-                        +e.data-value
-                            a(href='#') Очень длинное название документа номер два
-                        +e.data-value
-                            a(href='#') Самое длинное длинное название документа 
-                        +e.data-value
-                            a(href='#') Очень длинное название документа три
-                        +e.data-value
-                            a(href='#') Очень длинное название документа пять
+                    +e.data-col
+                        +e.data-block
+                            +e.data-label Вам принадлежит:
+                            +e.data-value 18 из 1990 паев
+                        +e.data-block
+                            +e.data-label Инвестиции:
+                            +e.data-value 4 344 132.00 ₽
+                        +e.data-block
+                            +e.data-label Ближайшая выплата:
+                            +e.data-value до 30.09.2020
+                        +e.data-block
+                            +e.data-label Рейтинг фонда:
+                            +e.data-value.--green А1
+                    +e.data-col
+                        +e.data-block
+                            +e.data-label Документы:
+                            +e.data-value
+                                a(href='#') Очень длинное название документа номер два
+                            +e.data-value
+                                a(href='#') Самое длинное длинное название документа 
+                            +e.data-value
+                                a(href='#') Очень длинное название документа три
+                            +e.data-value
+                                a(href='#') Очень длинное название документа пять
 
                 +e.toggles
                     +e.toggle
