--- a/develop/blocks/account-partner/account-partner.pug
+++ b/develop/blocks/account-partner/account-partner.pug
@@ -20,6 +20,8 @@ mixin account-partner()
                             span за первую сделку
                         div 0%
                             span за повторную
+                    +e.data-value.--full
+                        | Какой-то третий элемент
         +e.wrapper
             +e.col
                 +partner-links
