--- a/develop/blocks/authorization/authorization.pug
+++ b/develop/blocks/authorization/authorization.pug
@@ -11,6 +11,8 @@ mixin authorization()
                     +icon('settings')
                 +e.A.account(href='#' title='admin@aktivo.ru') 
                     span admin@aktivo.ru
+                +e.A.exit(href='#')
+                    +icon('exit')
                 //- +e.UL.list
                 //-     +e.LI.item
                 //-         +e.A.link(href='/realty') Недвижимость
