--- a/develop/blocks/account-partner/account-partner.scss
+++ b/develop/blocks/account-partner/account-partner.scss
@@ -86,6 +86,17 @@
             line-height: 1.1;
             font-weight: 400;
         }
+
+        &--full {
+            padding-top: 8px;
+
+            border-top: 1px solid #f6f6f6;
+
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 1.2;
+            color: #696969;
+        }
     }
 
     &__wrapper {
@@ -126,6 +137,10 @@
                 div {
                     padding: 0 12px;
                 }
+            }
+
+            &--full {
+                font-size: 14px;
             }
         }
 
