--- a/develop/blocks/authorization/authorization.scss
+++ b/develop/blocks/authorization/authorization.scss
@@ -97,7 +97,20 @@
         }
 
         &:hover {
-            color: $theme-color
+            color: $theme-color;
+        }
+    }
+
+    &__exit {
+        position: relative;
+        width: 22px;
+        height: 22px;
+        margin-left: 8px;
+
+        svg {
+            @include svg-icon;
+
+            fill: #9c9c9c;
         }
     }
 }
@@ -107,7 +120,6 @@
         &__inner-link {
             display: none;
         }
-        
     }
 }
 
@@ -116,7 +128,6 @@
         &__inner-link {
             display: block;
         }
-        
     }
 }
 
